--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,8 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+    <link rel='stylesheet'
+          type='text/css'
+          href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' />
   </body>
 </html>
